# Storytelling

./: .env  main.py  pyproject.toml  requirements.txt
main_code/: app.py  cultural.py  stories.py  story.py  voice.py
